--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 			const index = comments.findIndex((comment) => comment.id === 823423);
 			console.log(index, 1);
 
-			comments.splice(index, 1);
+			const newComments = [
+				...comments.slice(0, index),
+				...comments.slice(index + 1),
+			];
 		</script>
 	</body>
 </html>
